...
            android:layout_weight="1"
            android:text="@string/diff_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/WorkoutDifficultyInput"
            android:layout_width="168dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:max="5" />

    </LinearLayout>
...
            android:layout_weight="1"
            android:text="@string/length_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/WorkoutLengthInput"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
...
            android:layout_weight="1"
            android:text="@string/workout_description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/WorkoutDescriptionInput"
            android:layout_width="400dp"
            android:layout_height="130dp"
            android:layout_weight="7"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="@string/empty" />
    </LinearLayout>

    <Button
        android:id="@+id/AddWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addWorkoutButton"
...
