...
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/addButton" />

        <Button
            android:id="@+id/ViewProfileButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile" />
    </LinearLayout>

...
